local-fe: first commit

--- a/hwi-shopping-mall-be/.env
+++ b/hwi-shopping-mall-be/.env
@@ -1,2 +1,6 @@
-LOCAL_DB_ADDRESS=mongodb://localhost:27017/hwi-shopping-mall
+# LOCAL_DB_ADDRESS=mongodb://localhost:27017/hwi-shopping-mall
+MONGODB_URI_PROD=mongodb+srv://syaron9364:inSvjAoHWzDDshad@hwicluster.cb0dk.mongodb.net/hwi-shopping-mall
+
 PORT=5000
+
+JWT_SECRET_KEY=helee
